[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "astora",
    "astora.diagnostics",
    "astora.diagnostics.magnetics",
    "astora.mesh,

]

[project]
name = "astora"
version = "0.1.0"
authors = [
    {name = "Chris Bowman", email = "chris.bowman.physics@gmail.com"},
]
description = "Python tools for Bayesian equilibrium reconstruction"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

requires-python = ">=3.9"
dependencies = [
    "numpy >= 1.20",
    "scipy >= 1.6.3",
    "midas-fusion >= 0.3.0",
    "tokamesh >= 0.5.4"
]